@@ -1,6 +1,7 @@
-Thu Mar 18 11:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+Thu Mar 18 12:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
-	* gtkgame.c: Change window order and titles (Ned's suggestion)
+	* gtkgame.c: Change window order and titles, and put back
+		accelerators from windows (Ned's suggestions)
 
 Fri Mar 19 00:26:45 2004 Oystein Johansen  <oystein@gnubg.org>
 
